# TokenMark

./: .tokenmark.json  README.md  action.yml  commands.md  pyproject.toml  tokenmark.py
docs/: brainstorming_notes.md  demo.md  tokenmark_whitepaper_v0_9_4.md
locales/: glossary.json  tm.json  tm.sqlite
locales/de/: brainstorming_notes.catalog.json  concepts.catalog.json  demo.catalog.json  implementation.catalog.json  index.catalog.json  meeting_notes_fix.catalog.json  open_questions.catalog.json  overview.catalog.json  risks-and-open-questions.catalog.json
locales/en/: demo.catalog.json  demo.po  demo.xliff
themes/: default.css
tokenmark/: adapters.py  ai_translator.py  analytics.py  cache.py  catalog.py  cli.py  cli_helpers.py  compiler.py  compose.py  embeddings.py  git_ci.py  glossary.py  hooks.py  idgen.py  models.py  project.py  qa_linter.py  render_html.py  render_markdown.py  render_pdf.py  server.py  server_fastapi.py  site.py  term_extractor.py  tm.py  tm_sqlite.py  visual_qa.py
tokenmark/integrations/: mkdocs_plugin.py
tokenmark/plugins/: admonitions.py  mermaid.py
